[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Ricardo Boriba Makuere <rdobmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
safety = "^2.3.5"
bandit = "^1.7.5"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
